pkl-core/src/test/files/LanguageSnippetTests/input/errors/undefinedProperty4.pkl
class Zebra {
  party: Party
}

class Party {
  time: Mapping<Any, Int>
}

class Foo {
  bar: Bar
}

class Bar {
  num: Int
}

zebra: Zebra = new {
  party {
    time {
      [1] = 1
      [2] = 2
      [3] = 3
      [4] = 4
      [5] = 5
      [6] = 6
      [7] = 7
      [new Foo {
        bar {
          num = 5
        }
      }] = 0
      [new Foo {}] = 1
    }
  }
}
